--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <title>Kvalita vody</title>
     <h1>Kvalita vody</h1>
 </head>
