Make the UI responsive

--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <title>Kvalita vody</title>
-    <h1>Kvalita vody</h1>
 </head>
-<body>
-    {% for frame in iframes %}
-        <h3>{{ frame.name }}</h3>
-        <iframe src="{{ frame.url }}" width="450" height="200" frameborder="0"></iframe>
-    {% endfor %}
+
+<body class="bg-gradient-to-b from-[#509567] to-[#516395] pt-5 text-slate-300">
+    <div class="flex flex-col items-center">
+        <h1 class="text-2xl font-bold">Kvalita vody</h1>
+    </div>
+    <div class="grid grid-rows-5 md:grid-rows-3 md:grid-cols-2 gap-5 p-5">
+        {% for frame in iframes %}
+        <div class="h-[43vh] rounded-md p-5 bg-slate-700">
+            <iframe class="w-full h-full" src="{{ frame.url }}"></iframe>
+        </div>
+        {% endfor %}
+    </div>
 </body>
+
 </html>
