--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -2,11 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ===================== -->
+    <!-- ====== Browser ====== -->
+    <!-- ===================== -->
+
+    <!-- Charset -->
+    <meta charset="utf-8">
+
+    <!-- Style Sheets -->
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title -->
     <title>Kvalita vody</title>
+
+    <!-- Description -->
+    <meta name="description" content="Vizualizácia nameraných dát kvality vody">
+
+    <!-- Theme color -->
+    <meta name="theme-color" content="#509567">
+    <meta name="msapplication-TileColor" content="#509567">
+    <meta name="msapplication-navbutton-color" content="#509567">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#509567">
+
+    <!-- ===================== -->
+    <!-- ===== OpenGraph ===== -->
+    <!-- ===================== -->
+
+    <!-- Title -->
+    <meta property="og:title" content="Air quality index">
+
+    <!-- Description -->
+    <meta property="og:description" content="Vizualizácia nameraných dát kvality vody">
+
+    <!-- Type, Locale -->
+    <meta property="og:type" content="page">
+    <meta property="og:locale" content="sk_SK">
+
+    <!-- ===================== -->
+    <!-- ====== Twitter ====== -->
+    <!-- ===================== -->
+
+    <!-- Title -->
+    <meta property="twitter:title" content="Kvalita vody">
+
+    <!-- Description -->
+    <meta property="twitter:description" content="Vizualizácia nameraných dát kvality vody">
 </head>
 
 <body class="bg-gradient-to-b from-[#509567] to-[#516395] pt-5 text-slate-300">
