--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -56,9 +56,9 @@
     <div class="flex flex-col items-center">
         <h1 class="text-2xl font-bold">Kvalita vody</h1>
     </div>
-    <div class="grid grid-rows-5 md:grid-rows-3 md:grid-cols-2 gap-5 p-5">
+    <div class="grid md:grid-cols-2 gap-5 p-5">
         {% for frame in iframes %}
-        <div class="h-[43vh] rounded-md p-5 bg-slate-700">
+        <div class="h-[45vh] rounded-md p-5 bg-slate-700">
             <iframe class="w-full h-full" src="{{ frame.url }}"></iframe>
         </div>
         {% endfor %}
