Correct the `og:title` property

--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -32,7 +32,7 @@
     <!-- ===================== -->
 
     <!-- Title -->
-    <meta property="og:title" content="Air quality index">
+    <meta property="og:title" content="Kvalita vody">
 
     <!-- Description -->
     <meta property="og:description" content="Vizualizácia nameraných dát kvality vody">
